fixed off-center navbar in mobile view

--- a/site/src/app/components/nav/Nav.scss
+++ b/site/src/app/components/nav/Nav.scss
@@ -23,7 +23,7 @@
 
 		top: max(15px, 4%);
 		left: max(15px, 4%);
-		right: max(100px, 6%);
+		right: max(55px, 6%);
 		height: 60px;
 
 		.bckgrd {
